--- a/release-notes/4.7.25.md
+++ b/release-notes/4.7.25.md
@@ -125,6 +125,18 @@ Released October 4, 2017
   This optimizes the population of greetings for newly-created contacts, the
   slowest part of generating contacts.
 
+- **[CRM-18231](https://issues.civicrm.org/jira/browse/CRM-18231) Support safe
+  migration from production to non-production instances
+  ([10972](https://github.com/civicrm/civicrm-core/pull/10972),
+  [10936](https://github.com/civicrm/civicrm-core/pull/10936), and
+  [8724](https://github.com/civicrm/civicrm-core/pull/8724))**
+
+  This introduces a feature of environment labels that can be set in
+  `civicrm.settings.php` and be extended in specially-named settings files.  If
+  the label is anything other than `Production`, outbound email and scheduled
+  jobs are disabled.  See further explanation in the [Sysadmin
+  Guide](https://docs.civicrm.org/sysadmin/en/master/misc/staging-production/)
+
 ### CiviCase
 
 - **[CRM-20958](https://issues.civicrm.org/jira/browse/CRM-20958) Data model:
@@ -160,6 +172,11 @@ Released October 4, 2017
 
   The contribution status is now available as a Smarty variable on the receipt
   message template for online contributions.
+
+- **[CRM-21019](https://issues.civicrm.org/jira/browse/CRM-21019) Change column
+  labels ([10813](https://github.com/civicrm/civicrm-core/pull/10813))**
+
+  The column headers on accounting batch screens are now clearer.
 
 ### CiviEvent
 
@@ -197,6 +214,12 @@ Released October 4, 2017
 
   Drupal Views will now join to the `civicrm_note` table for any related entity,
   not just contacts.
+
+- **Add Contributions relevant to the Participant record.
+  ([469](https://github.com/civicrm/civicrm-drupal/pull/469))**
+
+  Drupal Views will now join to the `civicrm_participant_payment` table,
+  allowing related contributions to be displayed alongside event registrations.
 
 ## <a name="bugs"></a>Bugs resolved
 
@@ -321,51 +344,54 @@ Released October 4, 2017
   When](https://github.com/civicrm/org.civicrm.doctorwhen), a time lord
   extension, to straighten out the situation.
 
-- **[CRM-21055](https://issues.civicrm.org/jira/browse/CRM-21055) Change label of cancel button ([10845](https://github.com/civicrm/civicrm-core/pull/10845))**
+- **[CRM-20970](https://issues.civicrm.org/jira/browse/CRM-20970) long postal
+  code in db prevents searching by zipcode range
+  ([10781](https://github.com/civicrm/civicrm-core/pull/10781)) (completes
+  previous work)**
 
-- **[CRM-21047](https://issues.civicrm.org/jira/browse/CRM-21047) TypeError: financialtypeIds is undefined, on contribution form ([10836](https://github.com/civicrm/civicrm-core/pull/10836))**
+  This adds test coverage for the fix which appeared in 4.7.24.
 
-- **Update Jon Goldberg in CONTRIBUTORS.txt ([10840](https://github.com/civicrm/civicrm-core/pull/10840))**
+- **[CRM-20790](https://issues.civicrm.org/jira/browse/CRM-20790) CIVICRM-159 -
+  Import Contacts, Current Employer (Employee of field) is not being imported at
+  all ([10808](https://github.com/civicrm/civicrm-core/pull/10808))**
 
-- **[CRM-20615](https://issues.civicrm.org/jira/browse/CRM-20615) Export only those batches having status Exported ([10394](https://github.com/civicrm/civicrm-core/pull/10394))**
+  Import would fail to record relationships if data for one or both contacts in
+  the relationship matched existing contacts.
 
-- **[CRM-21026](https://issues.civicrm.org/jira/browse/CRM-21026) Contribution count on contact tabs excludes contributions with disabled financial types ([10824](https://github.com/civicrm/civicrm-core/pull/10824))**
+- **[CRM-21049](https://issues.civicrm.org/jira/browse/CRM-21049) Can't create a
+  RelationshipType record via API with "All Contacts" as a value
+  ([10839](https://github.com/civicrm/civicrm-core/pull/10839))**
 
-- **Klaas Eikelboom (Kainuk Empowerment) is member of CiviCooP ([10812](https://github.com/civicrm/civicrm-core/pull/10812))**
+  This prevented relationship types created in the API where one or both
+  contacts could be any contact type.
 
-- **[CRM-21019](https://issues.civicrm.org/jira/browse/CRM-21019) Change column labels ([10813](https://github.com/civicrm/civicrm-core/pull/10813))**
+- **[CRM-20993](https://issues.civicrm.org/jira/browse/CRM-20993) API -
+  Extension get - Cannot filter by ID anymore
+  ([10794](https://github.com/civicrm/civicrm-core/pull/10794))**
 
-- **[CRM-21000](https://issues.civicrm.org/jira/browse/CRM-21000) Display result as Mailing on Advance Search produces DB Error ([10798](https://github.com/civicrm/civicrm-core/pull/10798))**
+- **[CRM-21029](https://issues.civicrm.org/jira/browse/CRM-21029) Activity
+  report SQL syntax error
+  ([10819](https://github.com/civicrm/civicrm-core/pull/10819))**
 
-- **[CRM-20970](https://issues.civicrm.org/jira/browse/CRM-20970) long postal code in db prevents searching by zipcode range ([10781](https://github.com/civicrm/civicrm-core/pull/10781))**
+  A SQL error would appear in the Activity Report, including the Scheduled
+  Activities dashlet, when no ACL `WHERE` clauses are applicable.
 
-- **[CRM-20790](https://issues.civicrm.org/jira/browse/CRM-20790) CIVICRM-159 - Import Contacts, Current Employer (Employee of field) is not being imported at all ([10808](https://github.com/civicrm/civicrm-core/pull/10808))**
+- **[CRM-20858](https://issues.civicrm.org/jira/browse/CRM-20858) Custom fields
+  migrated even when not asked during merge
+  ([10831](https://github.com/civicrm/civicrm-core/pull/10831))**
 
-- **(NFC) Lint civicrm.drush.inc ([473](https://github.com/civicrm/civicrm-drupal/pull/473))**
+- **[CRM-21129](https://issues.civicrm.org/jira/browse/CRM-21129) CLI import
+  doesn't allow single-column CSVs
+  ([10924](https://github.com/civicrm/civicrm-core/pull/10924))**
 
-- **Add Contributions relevant to the Participant record. ([469](https://github.com/civicrm/civicrm-drupal/pull/469))**
+- **[CRM-19612](https://issues.civicrm.org/jira/browse/CRM-19612) DB error
+  deduping a group when rule has more than one field
+  ([10405](https://github.com/civicrm/civicrm-core/pull/10405))**
 
-- **Fix parameter parsing in wp-cli civicrm api. ([114](https://github.com/civicrm/civicrm-wordpress/pull/114))**
-
-### CiviCRM API
-
-- **[CRM-18231](https://issues.civicrm.org/jira/browse/CRM-18231) Support safe migration from production to non-production instances ([10972](https://github.com/civicrm/civicrm-core/pull/10972), [10936](https://github.com/civicrm/civicrm-core/pull/10936), and [8724](https://github.com/civicrm/civicrm-core/pull/8724))**
-
-- **[CRM-21049](https://issues.civicrm.org/jira/browse/CRM-21049) Can't create a RelationshipType record via API with "All Contacts" as a value ([10839](https://github.com/civicrm/civicrm-core/pull/10839))**
-
-- **[CRM-20993](https://issues.civicrm.org/jira/browse/CRM-20993) API - Extension get - Cannot filter by ID anymore ([10794](https://github.com/civicrm/civicrm-core/pull/10794))**
-
-### CiviReport
-
-- **[CRM-21121](https://issues.civicrm.org/jira/browse/CRM-21121) Event Income (Summary) report backtrace with 'only_full_group_by' ([10926](https://github.com/civicrm/civicrm-core/pull/10926))**
-
-- **[CRM-21029](https://issues.civicrm.org/jira/browse/CRM-21029) Activity report SQL syntax error ([10819](https://github.com/civicrm/civicrm-core/pull/10819))**
-
-- **[CRM-20930](https://issues.civicrm.org/jira/browse/CRM-20930) Case Detail Report cannot filter by "Last Action Date" ([10712](https://github.com/civicrm/civicrm-core/pull/10712))**
-
-### Core CiviCRM, NYSS
-
-- **[CRM-20855](https://issues.civicrm.org/jira/browse/CRM-20855) Disabling "Search Primary Details Only" causes partial CiviMail delivery failure ([10915](https://github.com/civicrm/civicrm-core/pull/10915))**
+- **[CRM-19664](https://issues.civicrm.org/jira/browse/CRM-19664) Skip row and
+  keep importing if matching this contact based on the de-dupe rule would cause
+  an external ID conflict
+  ([9410](https://github.com/civicrm/civicrm-core/pull/9410))**
 
 ### CiviMail
 
@@ -385,23 +411,23 @@ Released October 4, 2017
   filter option.  This caused the report to default to this value and not load
   any data.
 
-- **[CRM-20982](https://issues.civicrm.org/jira/browse/CRM-20982) Fix: Mails sent via command line fail due to EHLO/HELO being "localhost" ([10785](https://github.com/civicrm/civicrm-core/pull/10785))**
+- **[CRM-21000](https://issues.civicrm.org/jira/browse/CRM-21000) Display result
+  as Mailing on Advance Search produces DB Error
+  ([10798](https://github.com/civicrm/civicrm-core/pull/10798))**
 
-### Dedupe
+  This resolves an error in Advanced Search when the form is set to display
+  mailings rather than contacts.
 
-- **[CRM-20858](https://issues.civicrm.org/jira/browse/CRM-20858) Custom fields migrated even when not asked during merge ([10831](https://github.com/civicrm/civicrm-core/pull/10831))**
+- **[CRM-20855](https://issues.civicrm.org/jira/browse/CRM-20855) Disabling
+  "Search Primary Details Only" causes partial CiviMail delivery failure
+  ([10915](https://github.com/civicrm/civicrm-core/pull/10915))**
 
-### CiviCRM API, Import
+- **[CRM-20982](https://issues.civicrm.org/jira/browse/CRM-20982) Fix: Mails
+  sent via command line fail due to EHLO/HELO being "localhost"
+  ([10785](https://github.com/civicrm/civicrm-core/pull/10785))**
 
-- **[CRM-21129](https://issues.civicrm.org/jira/browse/CRM-21129) CLI import doesn't allow single-column CSVs ([10924](https://github.com/civicrm/civicrm-core/pull/10924))**
-
-### CiviCRM API, CiviEvent
-
-- **[CRM-20027](https://issues.civicrm.org/jira/browse/CRM-20027) Need 'access deleted contacts' permission to retrieve loc block addresses using API ([10916](https://github.com/civicrm/civicrm-core/pull/10916))**
-
-### CiviContribute, CiviMember
-
-- **[CRM-19469](https://issues.civicrm.org/jira/browse/CRM-19469) EWay transaction receipt not sent when member signs up using front-end form but works in the CiviCRM back-end ([9973](https://github.com/civicrm/civicrm-core/pull/9973))**
+  SMTP connections from the command line now attempt to identify themselves with
+  `EHLO` and the base URL rather than just `EHLO localhost`.
 
 ### Backdrop Integration
 
@@ -411,17 +437,30 @@ Released October 4, 2017
 
   This would cause problems if Backdrop compatibility mode was disabled.
 
-- **[CRM-21098](https://issues.civicrm.org/jira/browse/CRM-21098) Prevent Backdrop admin drop-down menus from appearing beneath CiviCRM admin menu ([10892](https://github.com/civicrm/civicrm-core/pull/10892))**
+- **[CRM-21098](https://issues.civicrm.org/jira/browse/CRM-21098) Prevent
+  Backdrop admin drop-down menus from appearing beneath CiviCRM admin menu
+  ([10892](https://github.com/civicrm/civicrm-core/pull/10892))**
 
-- **[CRM-21095](https://issues.civicrm.org/jira/browse/CRM-21095) CSS conflicts between CiviCRM and Backdrop ([10891](https://github.com/civicrm/civicrm-core/pull/10891), [42](https://github.com/civicrm/civicrm-backdrop/pull/42), and [41](https://github.com/civicrm/civicrm-backdrop/pull/41))**
+- **[CRM-21095](https://issues.civicrm.org/jira/browse/CRM-21095) CSS conflicts
+  between CiviCRM and Backdrop
+  ([10891](https://github.com/civicrm/civicrm-core/pull/10891),
+  [42](https://github.com/civicrm/civicrm-backdrop/pull/42), and
+  [41](https://github.com/civicrm/civicrm-backdrop/pull/41))**
 
 ### CiviCampaign
 
-- **[CRM-21094](https://issues.civicrm.org/jira/browse/CRM-21094) Minor improvement to display of columns in Survey Details report ([10889](https://github.com/civicrm/civicrm-core/pull/10889))**
+- **[CRM-21094](https://issues.civicrm.org/jira/browse/CRM-21094) Minor
+  improvement to display of columns in Survey Details report
+  ([10889](https://github.com/civicrm/civicrm-core/pull/10889))**
 
-- **[CRM-21089](https://issues.civicrm.org/jira/browse/CRM-21089) Fatal error on "Interview Respondents" ([10885](https://github.com/civicrm/civicrm-core/pull/10885))**
+  This arranges the columns so that contact-related fields are together and
+  preceding activity fields.
 
-### Drupal Integration Modules
+- **[CRM-21089](https://issues.civicrm.org/jira/browse/CRM-21089) Fatal error on
+  "Interview Respondents"
+  ([10885](https://github.com/civicrm/civicrm-core/pull/10885))**
+
+### Drupal Integration
 
 - **[CRM-17652](https://issues.civicrm.org/jira/browse/CRM-17652) Symfony
   conflict between Civi and Drupal 8
@@ -432,11 +471,14 @@ Released October 4, 2017
   does not conflict with Drupal 8.  It resolves a bug where Drupal 8 sites with
   CiviCRM could not install any more modules.
 
-- **[CRM-20838](https://issues.civicrm.org/jira/browse/CRM-20838) Provide alert & fix method for tables in the CiviCRM Db with no log table ([10628](https://github.com/civicrm/civicrm-core/pull/10628))**
+- **[CRM-20838](https://issues.civicrm.org/jira/browse/CRM-20838) Provide alert &
+  fix method for tables in the CiviCRM Db with no log table
+  ([10628](https://github.com/civicrm/civicrm-core/pull/10628))**
 
-### Core CiviCRM, Dedupe
-
-- **[CRM-19612](https://issues.civicrm.org/jira/browse/CRM-19612) DB error deduping a group when rule has more than one field  ([10405](https://github.com/civicrm/civicrm-core/pull/10405))**
+  If Drupal and CiviCRM are installed with the same database and logging is
+  enabled, the logging triggers get confused by the existence of tables created
+  by the role sync modules.  A system check now suggests that corresponding log
+  tables be created when it notices this.
 
 ### CiviMember
 
@@ -454,11 +496,28 @@ Released October 4, 2017
   A helpful warning appears when attempting to set a membership renewal date
   prior to the join date.
 
-- **[CRM-20966](https://issues.civicrm.org/jira/browse/CRM-20966) Contribution deleted when relationship deleted, incorrect line items & membership_payments for second inherited membership created in back end via price set ([10759](https://github.com/civicrm/civicrm-core/pull/10759))**
+- **[CRM-20966](https://issues.civicrm.org/jira/browse/CRM-20966) Contribution
+  deleted when relationship deleted, incorrect line items & membership_payments
+  for second inherited membership created in back end via price set
+  ([10759](https://github.com/civicrm/civicrm-core/pull/10759))**
 
-- **[CRM-20955](https://issues.civicrm.org/jira/browse/CRM-20955) Contact's second membership fails to inherit when created in back end using price set ([10745](https://github.com/civicrm/civicrm-core/pull/10745))**
+  This resolves a problem where membership contributions would be applied
+  incorrectly when one contact inherits memberships of separate types from
+  separate related contacts.  This could result in data loss if the relationship
+  is deleted.
+
+- **[CRM-20955](https://issues.civicrm.org/jira/browse/CRM-20955) Contact's
+  second membership fails to inherit when created in back end using price set
+  ([10745](https://github.com/civicrm/civicrm-core/pull/10745))**
 
 ### CiviContribute
+
+- **[CRM-21055](https://issues.civicrm.org/jira/browse/CRM-21055) Change label
+  of cancel button
+  ([10845](https://github.com/civicrm/civicrm-core/pull/10845))**
+
+  The button to exit the backend contribution form without saving is now labeled
+  "Close" rather than "Cancel".  This now differs from all other forms.
 
 - **[CRM-17040](https://issues.civicrm.org/jira/browse/CRM-17040) Import
   Contributions using External Id's causes soft credit to be wrongly associated
@@ -495,37 +554,89 @@ Released October 4, 2017
   field at the top of the contribution page would fail to disappear, resulting
   in two HTML fields for the same data.  This resolves that bug.
 
-- **[CRM-21043](https://issues.civicrm.org/jira/browse/CRM-21043) Fix Dupe check of on behalf organisation ([10830](https://github.com/civicrm/civicrm-core/pull/10830))**
+- **[CRM-21047](https://issues.civicrm.org/jira/browse/CRM-21047) TypeError:
+  financialtypeIds is undefined, on contribution form
+  ([10836](https://github.com/civicrm/civicrm-core/pull/10836))**
 
-- **[CRM-19739](https://issues.civicrm.org/jira/browse/CRM-19739) "New Account Relationship Option Screen" does not show exception ([10651](https://github.com/civicrm/civicrm-core/pull/10651))**
+  This resolves a Javascript error on the backend contribution form.
 
-- **[CRM-21015](https://issues.civicrm.org/jira/browse/CRM-21015) Contribution page creates recurring contribution even though recurring is not selected ([10835](https://github.com/civicrm/civicrm-core/pull/10835))**
+- **[CRM-20615](https://issues.civicrm.org/jira/browse/CRM-20615) Export only
+  those batches having status Exported
+  ([10394](https://github.com/civicrm/civicrm-core/pull/10394))**
 
-- **[CRM-21005](https://issues.civicrm.org/jira/browse/CRM-21005) "Record Payment" dialogue lacks required field and is clunky ([10817](https://github.com/civicrm/civicrm-core/pull/10817))**
+  This prevents batches from bein exported if the status isn't yet set to
+  "exported".
 
-- **[CRM-21031](https://issues.civicrm.org/jira/browse/CRM-21031) Financial type ID display instead of label in "View Price Options" ([10823](https://github.com/civicrm/civicrm-core/pull/10823))**
+- **[CRM-21026](https://issues.civicrm.org/jira/browse/CRM-21026) Contribution
+  count on contact tabs excludes contributions with disabled financial types
+  ([10824](https://github.com/civicrm/civicrm-core/pull/10824))**
 
-### Accounting Integration, CiviContribute
+- **[CRM-19469](https://issues.civicrm.org/jira/browse/CRM-19469) EWay
+  transaction receipt not sent when member signs up using front-end form but
+  works in the CiviCRM back-end
+  ([9973](https://github.com/civicrm/civicrm-core/pull/9973))**
 
-- **[CRM-19186](https://issues.civicrm.org/jira/browse/CRM-19186) Subsequent Installments of Recurring Credit Card Contributions Indicate a Payment Instrument of Check ([10749](https://github.com/civicrm/civicrm-core/pull/10749))**
+- **[CRM-21043](https://issues.civicrm.org/jira/browse/CRM-21043) Fix Dupe check
+  of on behalf organisation
+  ([10830](https://github.com/civicrm/civicrm-core/pull/10830))**
 
-### CiviPledge
+  When contributing on behalf of an organization, the organization would not be
+  checked against duplicates and a new contact would be created each time.
 
-- **[CRM-17281](https://issues.civicrm.org/jira/browse/CRM-17281) Pledges miscalculate when total amount is not an integer and a payment is received that covers three installments ([10861](https://github.com/civicrm/civicrm-core/pull/10861))**
+- **[CRM-19739](https://issues.civicrm.org/jira/browse/CRM-19739) "New Account
+  Relationship Option Screen" does not show exception
+  ([10651](https://github.com/civicrm/civicrm-core/pull/10651))**
 
-### Import
+  Creating an invalid account relationship would result in an endless spinning
+  logo rather than displaying an error.
 
-- **[CRM-19664](https://issues.civicrm.org/jira/browse/CRM-19664) Skip row and keep importing if matching this contact based on the de-dupe rule would cause an external ID conflict ([9410](https://github.com/civicrm/civicrm-core/pull/9410))**
+- **[CRM-21015](https://issues.civicrm.org/jira/browse/CRM-21015) Contribution
+  page creates recurring contribution even though recurring is not selected
+  ([10835](https://github.com/civicrm/civicrm-core/pull/10835))**
 
-### CiviCase, CiviCRM API
+  Recurring contributions would be created if a contribution page had the option
+  for recurring contributions and a membership price set, even if the recurring
+  contribution checkbox was empty.
 
-- **[CRM-18082](https://issues.civicrm.org/jira/browse/CRM-18082) CiviCase API Create ignores custom data ([10728](https://github.com/civicrm/civicrm-core/pull/10728))**
+- **[CRM-21005](https://issues.civicrm.org/jira/browse/CRM-21005) "Record
+  Payment" dialogue lacks required field and is clunky
+  ([10817](https://github.com/civicrm/civicrm-core/pull/10817))**
 
-### Accounting Integration
+  The form for recording a payment did not require a payment method even though
+  that is necessary.  Omitting it would result in a system error rather than a
+  validation error.  Also, the payment amount now defaults to the amount due.
 
-- **[CRM-21039](https://issues.civicrm.org/jira/browse/CRM-21039) Trying to add Asset account relationship throws validation error ([10828](https://github.com/civicrm/civicrm-core/pull/10828))**
+- **[CRM-21031](https://issues.civicrm.org/jira/browse/CRM-21031) Financial type
+  ID display instead of label in "View Price Options"
+  ([10823](https://github.com/civicrm/civicrm-core/pull/10823))**
 
-- **[CRM-20988](https://issues.civicrm.org/jira/browse/CRM-20988) Don't display option of Export, Delete etc to users who lack that permission ([10791](https://github.com/civicrm/civicrm-core/pull/10791))**
+- **[CRM-19186](https://issues.civicrm.org/jira/browse/CRM-19186) Subsequent
+  Installments of Recurring Credit Card Contributions Indicate a Payment
+  Instrument of Check
+  ([10749](https://github.com/civicrm/civicrm-core/pull/10749))**
+
+- **[CRM-17281](https://issues.civicrm.org/jira/browse/CRM-17281) Pledges
+  miscalculate when total amount is not an integer and a payment is received
+  that covers three installments
+  ([10861](https://github.com/civicrm/civicrm-core/pull/10861))**
+
+- **[CRM-21039](https://issues.civicrm.org/jira/browse/CRM-21039) Trying to add
+  Asset account relationship throws validation error
+  ([10828](https://github.com/civicrm/civicrm-core/pull/10828))**
+
+- **[CRM-20988](https://issues.civicrm.org/jira/browse/CRM-20988) Don't display
+  option of Export, Delete etc to users who lack that permission
+  ([10791](https://github.com/civicrm/civicrm-core/pull/10791))**
+
+### CiviCase
+
+- **[CRM-20930](https://issues.civicrm.org/jira/browse/CRM-20930) Case Detail
+  Report cannot filter by "Last Action Date"
+  ([10712](https://github.com/civicrm/civicrm-core/pull/10712))**
+
+- **[CRM-18082](https://issues.civicrm.org/jira/browse/CRM-18082) CiviCase API
+  Create ignores custom data
+  ([10728](https://github.com/civicrm/civicrm-core/pull/10728))**
 
 ### CiviEvent
 
@@ -558,15 +669,38 @@ Released October 4, 2017
   later event registration from backend produces formRule error
   ([10716](https://github.com/civicrm/civicrm-core/pull/10716))**
 
-- **[CRM-13309](https://issues.civicrm.org/jira/browse/CRM-13309) Participant Role on Event's Schedule Reminder form does not populate  ([10801](https://github.com/civicrm/civicrm-core/pull/10801))**
+- **[CRM-21121](https://issues.civicrm.org/jira/browse/CRM-21121) Event Income
+  (Summary) report backtrace with 'only_full_group_by'
+  ([10926](https://github.com/civicrm/civicrm-core/pull/10926))**
 
-- **[CRM-20942](https://issues.civicrm.org/jira/browse/CRM-20942) Email location type must be 'primary' in profile or user creation won't work for event ([10744](https://github.com/civicrm/civicrm-core/pull/10744))**
+- **[CRM-20027](https://issues.civicrm.org/jira/browse/CRM-20027) Need 'access
+  deleted contacts' permission to retrieve loc block addresses using API
+  ([10916](https://github.com/civicrm/civicrm-core/pull/10916))**
+
+  Addresses lacking contact IDs because they're used for event locations were
+  treated like addresses belonging to deleted contacts.
+
+- **[CRM-13309](https://issues.civicrm.org/jira/browse/CRM-13309) Participant
+  Role on Event's Schedule Reminder form does not populate
+  ([10801](https://github.com/civicrm/civicrm-core/pull/10801))**
+
+  The field to restrict scheduled reminders to specific participant roles would
+  not appear.
+
+- **[CRM-20942](https://issues.civicrm.org/jira/browse/CRM-20942) Email location
+  type must be 'primary' in profile or user creation won't work for event
+  ([10744](https://github.com/civicrm/civicrm-core/pull/10744))**
 
 ### WordPress Integration
 
-- **[CRM-21166](https://issues.civicrm.org/jira/browse/CRM-21166) WP-CLI commands fail due to whitespace in regex ([115](https://github.com/civicrm/civicrm-wordpress/pull/115))**
+- **Fix parameter parsing in wp-cli civicrm api.
+  ([114](https://github.com/civicrm/civicrm-wordpress/pull/114))**
 
-### Internationalisation
+- **[CRM-21166](https://issues.civicrm.org/jira/browse/CRM-21166) WP-CLI
+  commands fail due to whitespace in regex
+  ([115](https://github.com/civicrm/civicrm-wordpress/pull/115))**
+
+### Internationalization
 
 - **[CRM-19968](https://issues.civicrm.org/jira/browse/CRM-19968) Disable
   multiple languages fixes
@@ -645,6 +779,15 @@ Released October 4, 2017
 
 - **Update CONTRIBUTORS.txt
   ([10843](https://github.com/civicrm/civicrm-core/pull/10843))**
+
+- **Update Jon Goldberg in CONTRIBUTORS.txt
+  ([10840](https://github.com/civicrm/civicrm-core/pull/10840))**
+
+- **Klaas Eikelboom (Kainuk Empowerment) is member of CiviCooP
+  ([10812](https://github.com/civicrm/civicrm-core/pull/10812))**
+
+- **(NFC) Lint civicrm.drush.inc
+  ([473](https://github.com/civicrm/civicrm-drupal/pull/473))**
 
 ## <a name="credits"></a>Credits
 
