--- a/release-notes/4.7.25.md
+++ b/release-notes/4.7.25.md
@@ -793,12 +793,43 @@ Released October 4, 2017
 
 This release was developed by the following code authors:
 
-AGH Strategies - Alice Frumin, Andrew Hunt; agileware-dev; amsharma9; Australian Greens - Seamus Lee; CEDC - Laryn Kragt Bakker; Circle Interactive - Dave Jenkins; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Yashodha Chaku; CiviFirst - John Kirk; CompuCorp - Camilo Rodriguez; Coop SymbioTIC - Mathieu Lutfy; Eaiman; Freeform Solutions - Herb van den Dool; Fuzion - Eileen McNaughton, Jitendra Purohit; JMA Consulting - Edsel Lopez, Monish Deb, Pradeep Nayak; John Kingsnorth; Joinery - Allen Shaw; jonesinator; jusfreeman; Ken West; Left Join Labs - Sean Madsen; Lemniscus - Noah Miller; Lighthouse Design and Consulting - Brian Shaughnessy; Megaphone Technology Consulting - Jon Goldberg; MJW Consulting - Matthew Wire; myDropWizard - David Snopek; Oxfam Germany - Thomas Schüttler; Progressive Technology Project - Jamie McClelland; rtobias81; Tadpole Collective - Kevin Cristiano; Wikimedia Foundation - Eileen McNaughton
+Aaron Jones; Abhikalak Consultants - Amal Sharma; AGH Strategies - Alice Frumin,
+Andrew Hunt; Agileware - Agileware Team, Justin Freeman; Australian Greens -
+Seamus Lee; CEDC - Laryn Kragt Bakker; Circle Interactive - Dave Jenkins;
+CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Yashodha Chaku; CiviFirst - John
+Kirk; CompuCorp - Camilo Rodriguez; Coop SymbioTIC - Mathieu Lutfy; Eaiman
+Shoshi; Freeform Solutions - Herb van den Dool; Fuzion - Jitendra Purohit; JMA
+Consulting - Edsel Lopez, Monish Deb, Pradeep Nayak; John Kingsnorth; Joinery -
+Allen Shaw; Ken West; Left Join Labs - Sean Madsen; Lemniscus - Noah Miller;
+Lighthouse Design and Consulting - Brian Shaughnessy; Megaphone Technology
+Consulting - Jon Goldberg; MJW Consulting - Matthew Wire; myDropWizard - David
+Snopek; Oxfam Germany - Thomas Schüttler; Progressive Technology Project - Jamie
+McClelland; Randy Tobias; Tadpole Collective - Kevin Cristiano; Wikimedia
+Foundation - Eileen McNaughton
 
 Most authors also reviewed code for this release; in addition, the following
 reviewers contributed their comments:
 
-AGH Strategies - Alice Frumin, Andrew Hunt; Agileware - Agileware Team; andrew; andyw; artfulrobot.com; Australian Greens - Seamus Lee; autarch; Barbara Miller; Black Brick Software - David Hayes; Blackfly Solutions - Alan Dixon; brian; British Humanist Association - Andrew West, William Gordon; CEDC - Laryn Kragt Bakker; charlie; cherylchase; Christian Wach; Circle Interactive - Dave Jenkins, Martin Castle; CiviCoop - Jaap Jansma; CiviCooP - Klaas Eikelboom; civicrm-builder; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Nicolas Ganivet, Yashodha Chaku; CiviFirst - John Kirk; CompuCorp - Guanhuan Chen, Omar Abu Hussein; Coop SymbioTIC - Mathieu Lutfy; darrick; Dave Greenberg; David Hepper; deepak; demeritcowboy; Donald Hirst; Donald Lobo; dsnopek; eaiman; Effy Elden; Electronic Frontier Foundation - Mark Burdett; ericg; esummers; Forest CRM Consulting - Tamar Meir; Freeform Solutions - Herb van den Dool; freephile; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit, Peter Davis; Greenleaf Advancement - Guy Iaccarino; inteja; JMA Consulting - Edsel Lopez, Joe Murray, Monish Deb, Pradeep Nayak; joels341; Johan Vervloet; John Kingsnorth; Joinery - Allen Shaw; jonesinator; jusfreeman; ken; Ken West; Klangsoft - David Reedy Jr; Korlon - Stuart Gaston; Left Join Labs - Sean Madsen; Lemniscus - Noah Miller; Lighthouse Design and Consulting - Brian Shaughnessy; Lullabot - Nate Lampton; manish; Marc Brazeau; Megaphone Technology Consulting - Jon Goldberg; Michal Mach; MJW Consulting - Matthew Wire; myDropWizard - David Snopek; Nubay Services - David Tarrant; Oxfam Germany - Thomas Schüttler; Palante Technology Cooperative - Joseph Lacey; Phil McKerracher; Progressive Technology Project - Jamie McClelland; Rareș Pamfil; Responsive Development Technologies - Thomas Nilefalk; RexAK; RexAK-SOF; Richard van Oosterhout; rtobias; rtobias81; s.bink; Saurabh Batra; Semper IT - Karin Gerritsen; SEN Magazine - Jeremy Nicholls; shailesh; Skvare - Mark Hanna; Squiffle Consulting - Aidan Saunders; Tadpole Collective - Kevin Cristiano; Team Expansion - Greg Harris; tobiaslounsbury; Wikimedia Foundation - Elliott Eggleston
+Artful Robot - Rich Lott; Barbara Miller; Black Brick Software - David Hayes;
+Blackfly Solutions - Alan Dixon; Brian Hay; Brian McFee; British Humanist
+Association - Andrew West, William Gordon; Christian Wach; Circle Interactive -
+Andrew Walker, Martin Castle; CiviCoop - Jaap Jansma, Klaas Eikelboom; CiviDesk -
+Nicolas Ganivet; Community Builders - Andrew Perry; CompuCorp - Guanhuan Chen,
+Omar Abu Hussein; Dave D; Dave Greenberg; Dave Rolsky; David Hepper; Davis Media
+Access - Darrick Servis; Deepak Srivastava; Donald Hirst; Donald Lobo; Effy
+Elden; Electronic Frontier Foundation - Mark Burdett; eQuality Technology - Greg
+Rundlett; Forest CRM Consulting - Tamar Meir; Fuzion - Chris Burgess, Peter
+Davis; Greenleaf Advancement - Guy Iaccarino; Hemophilia of North Carolina -
+Charles Register; JMA Consulting - Joe Murray; Joel Stevens; Johan Vervloet;
+Klangsoft - David Reedy Jr; Korlon - Stuart Gaston; Lullabot - Nate Lampton;
+Manish Zope; Marc Brazeau; Mathias Consulting - Cheryl Chase; Michal Mach;
+National Democratic Institute - Evan Summers; Nubay Services - David Tarrant;
+Openflows - Eric Goldhagen; Palante Technology Cooperative - Joseph Lacey; Phil
+McKerracher; Rareș Pamfil; Responsive Development Technologies - Thomas
+Nilefalk; Rex Keal; Richard van Oosterhout; Saurabh Batra; Semper IT - Karin
+Gerritsen; SEN Magazine - Jeremy Nicholls; Shailesh Lende; Skvare - Mark Hanna;
+Squiffle Consulting - Aidan Saunders; Steve Binkowski; Team Expansion - Greg
+Harris; Tobias Lounsbury; Wikimedia Foundation - Elliott Eggleston
 
 ## <a name="feedback"></a>Feedback
 
