--- a/release-notes/4.7.25.md
+++ b/release-notes/4.7.25.md
@@ -16,8 +16,8 @@ Released October 4, 2017
 | Fix security vulnerabilities?                               |   no    |
 | **Change the database schema?**                             | **yes** |
 | **Alter the API?**                                          | **yes** |
-| Require attention to configuration options?                 |         |
-| Fix problems installing or upgrading to a previous version? |         |
+| Require attention to configuration options?                 |   no    |
+| Fix problems installing or upgrading to a previous version? |   no    |
 | **Introduce features?**                                     | **yes** |
 | **Fix bugs?**                                               | **yes** |
 
@@ -27,10 +27,11 @@ Released October 4, 2017
 
 - **[CRM-20769](https://issues.civicrm.org/jira/browse/CRM-20769) Allow for
   Button Text on profiles to be overriden in settings
-  ([10940](https://github.com/civicrm/civicrm-core/pull/10940))**
+  ([10940](https://github.com/civicrm/civicrm-core/pull/10940) and
+  [11051](https://github.com/civicrm/civicrm-core/pull/11051))**
 
   This adds columns to the `civicrm_uf_group` table to support customizing
-  profile buttons
+  profile buttons.
 
 - **[CRM-20964](https://issues.civicrm.org/jira/browse/CRM-20964) Include queue
   id while retrieving rows from Event Queue.
