--- a/release-notes/4.7.26.md
+++ b/release-notes/4.7.26.md
@@ -1,11 +1,25 @@
 # CiviCRM 4.7.26
 
-Released November 8, 2017;
+Released November 8, 2017
 
+- **[Synopsis](#synopsis)**
 - **[Features](#features)**
 - **[Bugs resolved](#bugs)**
 - **[Miscellany](#misc)**
 - **[Credits](#credits)**
+- **[Feedback](#feedback)**
+
+## <a name="synopsis"></a>Synopsis
+
+| *Does this version...?*                                     |         |
+|:----------------------------------------------------------- |:-------:|
+| Fix security vulnerabilities?                               |         |
+| Change the database schema?                                 |         |
+| Alter the API?                                              |         |
+| Require attention to configuration options?                 |         |
+| Fix problems installing or upgrading to a previous version? |         |
+| Introduce features?                                         |         |
+| Fix bugs?                                                   |         |
 
 ## <a name="features"></a>Features
 
@@ -227,3 +241,9 @@ Most authors also reviewed code for this release; in addition, the following
 reviewers contributed their comments:
 
 adzil; AGH Strategies - Alice Frumin, Andrew Hunt; artfulrobot; Artful Robot - Rich Lott; Australian Greens - Seamus Lee; Blackfly Solutions - Alan Dixon; Chris Burgess; Christian Wach; Circle Interactive - Dave Jenkins, Martin Castle; civicrm-builder; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Nicolas Ganivet, Sunil Pawar, Yashodha Chaku; CompuCorp - Michael Devery, Omar Abu Hussein; Coop SymbioTIC - Mathieu Lutfy, Samuel Vanhove; Dave Greenberg; Eli Lisseck; ericfg; Francesc Bassas i Bullich; Freeform Solutions - Herb van den Dool; Fuzion - Jitendra Purohit; gboudrias; Ginkgo Street Labs - Frank Gómez; JMA Consulting - Joe Murray, Monish Deb, Pradeep Nayak; John Kingsnorth; Joinery - Allen Shaw; Joseph Lacey; jules54; Kacper Warda; Korlon - Stuart Gaston; Left Join Labs - Sean Madsen; Lighthouse Design and Consulting - Brian Shaughnessy; Marc Brazeau; MC3 - Graham Mitchell; Megaphone Technology Consulting - Jon Goldberg; MJW Consulting - Matthew Wire; mmauroy; mohamedziada; Openflows - Eric Goldhagen; otetard; Pawel Nowak; Progressive Technology Project - Jamie McClelland; Semper IT - Karin Gerritsen; Skvare - Mark Hanna; Tadpole Collective - Kevin Cristiano; Third Sector Design - Michael McAndrew; Web Access - Kurund Jalmi; Wikimedia Foundation - Eileen McNaughton; ximapmi
+
+## <a name="feedback"></a>Feedback
+
+These release notes are edited by Alice Frumin and Andrew Hunt.  If you'd like
+to provide feedback on them, please login to https://chat.civicrm.org/civicrm
+and contact `@agh1`.
