--- a/release-notes/4.7.26.md
+++ b/release-notes/4.7.26.md
@@ -67,6 +67,10 @@ Released November 8, 2017
 
 - **[CRM-21168](https://issues.civicrm.org/jira/browse/CRM-21168) WordPress plugin wiki/support links are incorrect ([116](https://github.com/civicrm/civicrm-wordpress/pull/116))**
 
+- **[CRM-21170](https://issues.civicrm.org/jira/browse/CRM-21170) Provide option
+  to filter by contact id & external id
+  ([10966](https://github.com/civicrm/civicrm-core/pull/10966))
+
 ### CiviReport
 
 - **[CRM-21236](https://issues.civicrm.org/jira/browse/CRM-21236) Make contact custom fields available in Membership Detail report ([11042](https://github.com/civicrm/civicrm-core/pull/11042))**
