--- a/release-notes/4.7.27.md
+++ b/release-notes/4.7.27.md
@@ -1,4 +1,4 @@
-# CiviCRM 4.7.26
+# CiviCRM 4.7.27
 
 Released November 8, 2017
 
@@ -14,92 +14,179 @@ Released November 8, 2017
 | *Does this version...?*                                     |         |
 |:----------------------------------------------------------- |:-------:|
 | Fix security vulnerabilities?                               |         |
-| Change the database schema?                                 |         |
-| Alter the API?                                              |         |
+| **Change the database schema?**                             | **yes** |
+| **Alter the API?**                                          | **yes** |
 | Require attention to configuration options?                 |         |
 | Fix problems installing or upgrading to a previous version? |         |
-| Introduce features?                                         |         |
-| Fix bugs?                                                   |         |
+| **Introduce features?**                                     | **yes** |
+| **Fix bugs?**                                               | **yes** |
 
 ## <a name="features"></a>Features
 
-### WordPress Integration
-
-- **[CRM-17633](https://issues.civicrm.org/jira/browse/CRM-17633) WordPress in own directory breaks CiviCRM ([11031](https://github.com/civicrm/civicrm-core/pull/11031) and [105](https://github.com/civicrm/civicrm-wordpress/pull/105))**
-
-- **[CRM-21243](https://issues.civicrm.org/jira/browse/CRM-21243) Logo in WP menu doesn't follow standard ([118](https://github.com/civicrm/civicrm-wordpress/pull/118))**
-
 ### Core CiviCRM
 
-- **[CRM-21229](https://issues.civicrm.org/jira/browse/CRM-21229) Manage Group page is slow if you have smart groups ([11033](https://github.com/civicrm/civicrm-core/pull/11033))**
+- **[CRM-21234](https://issues.civicrm.org/jira/browse/CRM-21234) Missing
+  subdivisions of Tajikistan
+  ([11041](https://github.com/civicrm/civicrm-core/pull/11041))**
 
-- **[CRM-21201](https://issues.civicrm.org/jira/browse/CRM-21201) Tax recalculated when pay later contribution is completed using Pay Now ([11026](https://github.com/civicrm/civicrm-core/pull/11026))**
+  The list of states and provinces now contains the capital territory and
+  districts under republic administration of Tajikistan, which were added to ISO
+  3166-2 recently.
 
-- **[CRM-20852](https://issues.civicrm.org/jira/browse/CRM-20852) Show tax term in UI (eg. VAT) ([10640](https://github.com/civicrm/civicrm-core/pull/10640))**
+- **[CRM-21195](https://issues.civicrm.org/jira/browse/CRM-21195) Adding the
+  ability to add icons to menu items
+  ([11028](https://github.com/civicrm/civicrm-core/pull/11028),
+  [11025](https://github.com/civicrm/civicrm-core/pull/11025), and
+  [10996](https://github.com/civicrm/civicrm-core/pull/10996))**
 
-- **[CRM-21234](https://issues.civicrm.org/jira/browse/CRM-21234) Missing subdivisions of Tajikistan ([11041](https://github.com/civicrm/civicrm-core/pull/11041))**
+  When editing navigation menu items, you may now choose to display an icon from
+  the Font Awesome library.
 
-- **[CRM-21114](https://issues.civicrm.org/jira/browse/CRM-21114) file to case doesn't transfer activity assignees ([10912](https://github.com/civicrm/civicrm-core/pull/10912))**
+- **[CRM-21157](https://issues.civicrm.org/jira/browse/CRM-21157) Convert
+  civicrm_subscription_history.date to timestamp from datetime for new installs
+  ([10954](https://github.com/civicrm/civicrm-core/pull/10954))**
 
-- **[CRM-21195](https://issues.civicrm.org/jira/browse/CRM-21195) Adding the ability to add icons to menu items ([11028](https://github.com/civicrm/civicrm-core/pull/11028), [11025](https://github.com/civicrm/civicrm-core/pull/11025), and [10996](https://github.com/civicrm/civicrm-core/pull/10996))**
+  The group subscription date field will now be created as a timestamp field
+  when installing CiviCRM.  Upgrading sites will be left as-is but may use the
+  Doctor When utility to convert dates.
 
-- **[CRM-21216](https://issues.civicrm.org/jira/browse/CRM-21216) Replace member_BAO_membershiptype_getMembershipTypesByOrg with API equivalent ([11029](https://github.com/civicrm/civicrm-core/pull/11029) and [11020](https://github.com/civicrm/civicrm-core/pull/11020))**
+- **[CRM-20630](https://issues.civicrm.org/jira/browse/CRM-20630) Find
+  Activities: search criteria passing with URL parameters
+  ([10957](https://github.com/civicrm/civicrm-core/pull/10957))**
 
-- **[CRM-21220](https://issues.civicrm.org/jira/browse/CRM-21220) Invoice due date format spacing correction ([11024](https://github.com/civicrm/civicrm-core/pull/11024))**
+  Query parameters in the Activity Search may now be populated using URL
+  parameters along with `force=1`.  This allows a direct link to a listing of a
+  subset of activities.
 
-- **[CRM-21160](https://issues.civicrm.org/jira/browse/CRM-21160) Make event_type_id available in event message templates. ([10977](https://github.com/civicrm/civicrm-core/pull/10977))**
+- **[CRM-21086](https://issues.civicrm.org/jira/browse/CRM-21086) Allow Inline
+  View of Files Instead of Download
+  ([10883](https://github.com/civicrm/civicrm-core/pull/10883))**
 
-- **[CRM-21199](https://issues.civicrm.org/jira/browse/CRM-21199) Remove dependancy for  'Default invoice payment page' ([11003](https://github.com/civicrm/civicrm-core/pull/11003))**
-
-- **[CRM-21182](https://issues.civicrm.org/jira/browse/CRM-21182) Activity API - fetch case details ([10979](https://github.com/civicrm/civicrm-core/pull/10979))**
-
-- **[CRM-20889](https://issues.civicrm.org/jira/browse/CRM-20889) Toggle check_number field on backoffice form as payment form fields  ([10680](https://github.com/civicrm/civicrm-core/pull/10680))**
-
-- **[CRM-21157](https://issues.civicrm.org/jira/browse/CRM-21157) Convert civicrm_subscription_history.date to timestamp from datetime for new installs ([10954](https://github.com/civicrm/civicrm-core/pull/10954))**
-
-- **[CRM-20630](https://issues.civicrm.org/jira/browse/CRM-20630) Find Activities: search criteria passing with URL parameters ([10957](https://github.com/civicrm/civicrm-core/pull/10957))**
-
-- **[CRM-21038](https://issues.civicrm.org/jira/browse/CRM-21038) Billing and CC fields shown when payment processor not selected. ([10826](https://github.com/civicrm/civicrm-core/pull/10826))**
-
-- **[CRM-21086](https://issues.civicrm.org/jira/browse/CRM-21086) Allow Inline View of Files Instead of Download ([10883](https://github.com/civicrm/civicrm-core/pull/10883))**
-
-- **[CRM-21106](https://issues.civicrm.org/jira/browse/CRM-21106) Move financial type ACL clause for reports into extension ([10904](https://github.com/civicrm/civicrm-core/pull/10904))**
-
-- **[CRM-21168](https://issues.civicrm.org/jira/browse/CRM-21168) WordPress plugin wiki/support links are incorrect ([116](https://github.com/civicrm/civicrm-wordpress/pull/116))**
+  Adding the URL parameter `download=0` to a file link will now display the file
+  within the browser rather than downloading it.  This allows for files to be
+  rendered inline.
 
 - **[CRM-21170](https://issues.civicrm.org/jira/browse/CRM-21170) Provide option
   to filter by contact id & external id
-  ([10966](https://github.com/civicrm/civicrm-core/pull/10966))
+  ([10966](https://github.com/civicrm/civicrm-core/pull/10966))**
 
-### CiviReport
+  Contact selection boxes on other entities (such as backend contribution or
+  membership forms) now offer the ability to filter by contact ID or external
+  identifier.
 
-- **[CRM-21236](https://issues.civicrm.org/jira/browse/CRM-21236) Make contact custom fields available in Membership Detail report ([11042](https://github.com/civicrm/civicrm-core/pull/11042))**
+- **[CRM-21125](https://issues.civicrm.org/jira/browse/CRM-21125) permit class
+  assignment on links in reports
+  ([10922](https://github.com/civicrm/civicrm-core/pull/10922))**
 
-- **[CRM-21063](https://issues.civicrm.org/jira/browse/CRM-21063) Survey detail report lacks date options ([10857](https://github.com/civicrm/civicrm-core/pull/10857))**
+  Report developers can now set a variable class name for linked fields in
+  reports.
 
-- **[CRM-21125](https://issues.civicrm.org/jira/browse/CRM-21125) permit class assignment on links in reports ([10922](https://github.com/civicrm/civicrm-core/pull/10922))**
+### CiviCampaign
 
-### CiviEvent
+- **[CRM-21063](https://issues.civicrm.org/jira/browse/CRM-21063) Survey detail
+  report lacks date options
+  ([10857](https://github.com/civicrm/civicrm-core/pull/10857)) (partially
+  complete)**
 
-- **[CRM-12167](https://issues.civicrm.org/jira/browse/CRM-12167) Add support for admin-only fee / price field value options ([10902](https://github.com/civicrm/civicrm-core/pull/10902))**
-
-### CiviContribute
-
-- **[CRM-21205](https://issues.civicrm.org/jira/browse/CRM-21205) batch list does not display accurate currency ([11008](https://github.com/civicrm/civicrm-core/pull/11008))**
-
-- **[CRM-20276](https://issues.civicrm.org/jira/browse/CRM-20276) When editing a contribution the value in civicrm_financial_item_amount is not updated ([10970](https://github.com/civicrm/civicrm-core/pull/10970))**
-
-### CiviEvent, CiviReport, Internationalisation
-
-- **[CRM-21196](https://issues.civicrm.org/jira/browse/CRM-21196) Event reports localization ([10997](https://github.com/civicrm/civicrm-core/pull/10997))**
+  The interview date is now available as a column, filter, and ordering option
+  on the Survey Detail report.  However, the date display localization is still
+  forthcoming.
 
 ### CiviCase
 
-- **[CRM-21113](https://issues.civicrm.org/jira/browse/CRM-21113) find cases: search by case ID and subject ([10911](https://github.com/civicrm/civicrm-core/pull/10911))**
+- **[CRM-21182](https://issues.civicrm.org/jira/browse/CRM-21182) Activity API -
+  fetch case details
+  ([10979](https://github.com/civicrm/civicrm-core/pull/10979))**
+
+  Results of an `Activity.get` API request can now return data about a case that
+  the activity is filed to.
+
+- **[CRM-21113](https://issues.civicrm.org/jira/browse/CRM-21113) find cases:
+  search by case ID and subject
+  ([10911](https://github.com/civicrm/civicrm-core/pull/10911))**
+
+  You can now search by case ID or case subject in the Find Cases and Advanced
+  Search forms.  The layout of the case search fields is also modified.
+
+### CiviContribute
+
+- **[CRM-12167](https://issues.civicrm.org/jira/browse/CRM-12167) Add support
+  for admin-only fee / price field value options
+  ([10902](https://github.com/civicrm/civicrm-core/pull/10902))**
+
+  Individual options within a price field can now be restricted so that they can
+  only be chosen by administrators.
+
+- **[CRM-20852](https://issues.civicrm.org/jira/browse/CRM-20852) Show tax term
+  in UI (eg. VAT)
+  ([10640](https://github.com/civicrm/civicrm-core/pull/10640))**
+
+  The term describing the tax (e.g. "VAT", "HST") is now displayed in
+  contribution details when tax is applied.
+
+- **[CRM-20889](https://issues.civicrm.org/jira/browse/CRM-20889) Toggle
+  check_number field on backoffice form as payment form fields
+  ([10680](https://github.com/civicrm/civicrm-core/pull/10680))**
+
+  Check number now appears as a detail of the payment when paying by check rather than an attribute
+  of the contribution as a whole.
+
+- **[CRM-21106](https://issues.civicrm.org/jira/browse/CRM-21106) Move financial
+  type ACL clause for reports into extension
+  ([10904](https://github.com/civicrm/civicrm-core/pull/10904)) (preliminary
+  work)**
+
+  A system check and upgrade message now alert users who use financial type ACLs
+  but have not yet installed the "Access Control by Financial Type for Reports"
+  extension.  These features will soon be removed from core CiviCRM.
+
+### CiviEvent
+
+- **[CRM-21160](https://issues.civicrm.org/jira/browse/CRM-21160) Make
+  event_type_id available in event message templates.
+  ([10977](https://github.com/civicrm/civicrm-core/pull/10977))**
+
+  Event message templates now can include `{$event_type_id}` to display the ID
+  of the event type.
+
+### CiviMember
+
+- **[CRM-21236](https://issues.civicrm.org/jira/browse/CRM-21236) Make contact
+  custom fields available in Membership Detail report
+  ([11042](https://github.com/civicrm/civicrm-core/pull/11042))**
+
+  Custom fields about contacts can now be included as columns and filters on the
+  Membership Detail report.
+
+### WordPress Integration
+
+- **[CRM-17633](https://issues.civicrm.org/jira/browse/CRM-17633) WordPress in
+  own directory breaks CiviCRM
+  ([11031](https://github.com/civicrm/civicrm-core/pull/11031) and
+  [105](https://github.com/civicrm/civicrm-wordpress/pull/105))**
+
+  CiviCRM now supports a non-default but acceptable WordPress configuration
+  where WordPress files are in a subdirectory of the site root.
+
+- **[CRM-21243](https://issues.civicrm.org/jira/browse/CRM-21243) Logo in WP
+  menu doesn't follow standard
+  ([118](https://github.com/civicrm/civicrm-wordpress/pull/118))**
+
+  The CiviCRM icon in the WordPress left-side menu now is a SVG that adopts the
+  appropriate colors as the menu item is highlighted or selected.
 
 ## <a name="bugs"></a>Bugs resolved
 
 ### Core CiviCRM
+
+- **[CRM-21229](https://issues.civicrm.org/jira/browse/CRM-21229) Manage Group
+  page is slow if you have smart groups
+  ([11033](https://github.com/civicrm/civicrm-core/pull/11033)) (partially
+  resolved)**
+
+  The Manage Groups page now will display "Unknown" for the count of smart group
+  members where the smart group cache is empty.  You can click the button to
+  regenerate the smart group cache if you want to see the up-to-date counts.
 
 - **[CRM-20636](https://issues.civicrm.org/jira/browse/CRM-20636) Notice fix while updating membership without payment  ([10412](https://github.com/civicrm/civicrm-core/pull/10412))**
 
@@ -201,7 +288,51 @@ Released November 8, 2017
 
 - **[CRM-20217](https://issues.civicrm.org/jira/browse/CRM-20217) phone based dedupe rule fails to match when importing ([9925](https://github.com/civicrm/civicrm-core/pull/9925))**
 
+### CiviCase
+
+- **[CRM-21114](https://issues.civicrm.org/jira/browse/CRM-21114) file to case
+  doesn't transfer activity assignees
+  ([10912](https://github.com/civicrm/civicrm-core/pull/10912))**
+
 ### CiviContribute
+
+- **[CRM-21201](https://issues.civicrm.org/jira/browse/CRM-21201) Tax
+  recalculated when pay later contribution is completed using Pay Now
+  ([11026](https://github.com/civicrm/civicrm-core/pull/11026))**
+
+  This resolves a problem when tax would be recalculated and tacked onto the
+  amount due during the course of completing pay-later contributions.
+
+- **[CRM-21205](https://issues.civicrm.org/jira/browse/CRM-21205) batch list
+  does not display accurate currency
+  ([11008](https://github.com/civicrm/civicrm-core/pull/11008))**
+
+  Transactions listed in financial batches now display the specific
+  transaction's currency rather than the default system currency.
+
+- **[CRM-20276](https://issues.civicrm.org/jira/browse/CRM-20276) When editing a
+  contribution the value in civicrm_financial_item_amount is not updated
+  ([10970](https://github.com/civicrm/civicrm-core/pull/10970))**
+
+- **[CRM-21220](https://issues.civicrm.org/jira/browse/CRM-21220) Invoice due
+  date format spacing correction
+  ([11024](https://github.com/civicrm/civicrm-core/pull/11024))**
+
+- **[CRM-21199](https://issues.civicrm.org/jira/browse/CRM-21199) Remove
+  dependancy for  'Default invoice payment page'
+  ([11003](https://github.com/civicrm/civicrm-core/pull/11003))**
+
+  The option to choose a default invoice payment page is no longer obscured if
+  deferred revenue is disabled.
+
+- **[CRM-21038](https://issues.civicrm.org/jira/browse/CRM-21038) Billing and CC
+  fields shown when payment processor not selected.
+  ([10826](https://github.com/civicrm/civicrm-core/pull/10826))**
+
+  Contribution pages may have price sets where no option is selected by default.
+  In this case, when the total contribution is zero, no payment processor is
+  selected.  However, a bug would display credit card and billing address fields
+  incorrectly.  This change resolves this bug.
 
 - **[CRM-21221](https://issues.civicrm.org/jira/browse/CRM-21221) Precedence order logic bug in Contribution.completetransaction  ([11027](https://github.com/civicrm/civicrm-core/pull/11027))**
 
@@ -217,6 +348,11 @@ Released November 8, 2017
 
 ### CiviEvent
 
+- **[CRM-21196](https://issues.civicrm.org/jira/browse/CRM-21196) Event reports
+  localization ([10997](https://github.com/civicrm/civicrm-core/pull/10997))**
+
+  A number of previously unhandled strings are now sent through translation.
+
 - **[CRM-21127](https://issues.civicrm.org/jira/browse/CRM-21127) Event API return request params format is partially outdated ([10984](https://github.com/civicrm/civicrm-core/pull/10984))**
 
 - **[CRM-21133](https://issues.civicrm.org/jira/browse/CRM-21133) Price set error with NULL financial types  ([10947](https://github.com/civicrm/civicrm-core/pull/10947))**
@@ -231,9 +367,18 @@ Released November 8, 2017
 
 ### WordPress Integration
 
+- **[CRM-21168](https://issues.civicrm.org/jira/browse/CRM-21168) WordPress
+  plugin wiki/support links are incorrect
+  ([116](https://github.com/civicrm/civicrm-wordpress/pull/116))**
+
 - **[CRM-21166](https://issues.civicrm.org/jira/browse/CRM-21166) WP-CLI commands fail due to whitespace in regex ([115](https://github.com/civicrm/civicrm-wordpress/pull/115))**
 
 ## <a name="misc"></a>Miscellany
+
+- **[CRM-21216](https://issues.civicrm.org/jira/browse/CRM-21216) Replace
+  member_BAO_membershiptype_getMembershipTypesByOrg with API equivalent
+  ([11029](https://github.com/civicrm/civicrm-core/pull/11029) and
+  [11020](https://github.com/civicrm/civicrm-core/pull/11020))**
 
 ## <a name="credits"></a>Credits
 
